Add create tag feature
